--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -143,7 +143,7 @@ operations.  The \enquote{dynamicity} problem can be approached in other ways as
 \parencite{goodman2012church} and Venture \parencite{mansinghka2014venture} to produce what in the
 latter is called \enquote{probabilistic execution traces}: multiple different traces are dynamically
 stored as alternative paralles paths in the execution trace, with possible interconnections.
-
+\todo{PPL frameworks: stan, bugs/jags}
 
 %%% Local Variables: 
 %%% TeX-master: "main"
