--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -299,7 +299,8 @@ commentstyle={},
 showstringspaces=false,
 upquote=true,
 tabsize=4,
-aboveskip={1.5\baselineskip}, belowskip={1.5\baselineskip}
+aboveskip={0.7\baselineskip plus 0.1ex minus 0.2ex},
+belowskip={0.7\baselineskip plus 0.1ex minus 0.2ex}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
