--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -19,7 +19,7 @@
     distributions or unnormalized densities.
   \item[{\(\Prob{X \in A} = P_{X}(A) = \int_{A} p_{X}(x) \dif\mu(x)\)}] A capital \(P\) with subscript
     is used for the probability measure associated with a random variable.
-  \item[\(\Prob{X \in \dif x} = p_{X}(x) \dif\mu(x)\)] Differentials of this form are used to
+  \item[\(\Prob{X \in \dif x} = P_{X}(\dif x) = p_{X}(x) \dif\mu(x)\)] Differentials of this form are used to
     concisely express densities of random variables (i.e., Radon-Nikodym derivatives of the
     associated probability measure).  The example is equivalent to the statement
     \(\od{P_{X}}{\mu} = p_{X}\).
