--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -35,6 +35,30 @@
   number = {3}
 }
 
+@online{apple2020swift,
+  title = {The {{Swift Programming Language}}: {{Swift}} 5.3},
+  author = {{Apple}},
+  date = {2020},
+  journaltitle = {Swift.org},
+  url = {https://docs.swift.org/swift-book/},
+  urldate = {2020-11-01},
+  abstract = {Swift is a general-purpose programming language built using a modern approach to safety, performance, and software design patterns.},
+  file = {/home/philipp/Zotero/storage/VCTJ4LH7/documentation.html},
+  langid = {english}
+}
+
+@online{apple2020swifta,
+  title = {Swift {{Compiler}}},
+  author = {{Apple}},
+  date = {2020},
+  journaltitle = {Swift.org},
+  url = {https://swift.org/swift-compiler/},
+  urldate = {2020-11-01},
+  abstract = {Swift is a general-purpose programming language built using a modern approach to safety, performance, and software design patterns.},
+  file = {/home/philipp/Zotero/storage/NAZ7WV3P/swift-compiler.html},
+  langid = {english}
+}
+
 @article{bartholomew-biggs2000automatic,
   title = {Automatic Differentiation of Algorithms},
   author = {Bartholomew-Biggs, Michael and Brown, Steven and Christianson, Bruce and Dixon, Laurence},
@@ -1313,15 +1337,6 @@
   langid = {english}
 }
 
-@software{swift2019,
-  title = {Swift for {{TensorFlow}}},
-  date = {2019-04-30T12:52:45Z},
-  origdate = {2018-04-24T19:18:14Z},
-  url = {https://github.com/tensorflow/swift},
-  urldate = {2019-04-30},
-  organization = {{tensorflow}}
-}
-
 @online{tapenadedevelopers2019tapenade,
   title = {The {{Tapenade A}}.{{D}}. Engine},
   author = {{Tapenade developers}},
@@ -1345,6 +1360,27 @@
   file = {/home/philipp/Zotero/storage/UY36CUVX/Tarek et al_2020_DynamicPPL.pdf;/home/philipp/Zotero/storage/BW88TF2C/2002.html},
   primaryClass = {cs, stat},
   version = {1}
+}
+
+@software{tensorflowdevelopers2018swift,
+  title = {Swift for {{TensorFlow}}},
+  author = {{TensorFlow Developers}},
+  date = {2018-04-24T19:18:14Z},
+  url = {https://github.com/tensorflow/swift},
+  urldate = {2020-11-01}
+}
+
+@online{tensorflowdevelopers2020xla,
+  title = {{{XLA}}: {{Optimizing Compiler}} for {{Machine Learning}}},
+  shorttitle = {{{XLA}}},
+  author = {{TensorFlow Developers}},
+  date = {2020-09-02},
+  journaltitle = {TensorFlow},
+  url = {https://www.tensorflow.org/xla},
+  urldate = {2020-10-27},
+  abstract = {XLA is a compiler-based linear algebra execution engine.},
+  file = {/home/philipp/Zotero/storage/TIFIE6HA/xla.html},
+  langid = {english}
 }
 
 @inproceedings{tokui2015chainer,
@@ -1527,18 +1563,6 @@
   file = {/home/philipp/Zotero/storage/PJMCI3JT/Wright - AN ALGEBRAIC PERSPECTIVE ON COMPUTING WITH DATA.pdf},
   langid = {english},
   type = {PhD Thesis}
-}
-
-@online{xla2020,
-  title = {{{XLA}}: {{Optimizing Compiler}} for {{Machine Learning}}},
-  shorttitle = {{{XLA}}},
-  date = {2020},
-  journaltitle = {TensorFlow},
-  url = {https://www.tensorflow.org/xla},
-  urldate = {2020-10-27},
-  abstract = {XLA is a compiler-based linear algebra execution engine.},
-  file = {/home/philipp/Zotero/storage/TIFIE6HA/xla.html},
-  langid = {english}
 }
 
 @article{yugibbs,
