--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -7,11 +7,11 @@ overview of Baysian inference and probabilistic programming in general, necessar
 requirements and usual approaches of probabilistic programming systems.
 
 Consequently, the machinery and language used to develop the graph tracking system forming the main
-part of the work are described.  This consists firstly of a short introduction to graph tracking and
-source-to-source automatic differentiation, which contain many ideas and terminology that will be
-used later, and often provided inspiration.  Secondly, the basic notions and techniques of the Julia
-compilation process as well as the language's metaprogramming capabilities are described, which form
-the basis of the implementation.
+part of the work are described.  This consists firstly of the basic notions and techniques of the
+Julia compilation process as well as the language's metaprogramming capabilities are described,
+which form the basis of the implementation.  Secondly, a short introduction to graph tracking and
+source-to-source automatic differentiation is given, which contains many ideas and terminology that
+will be used later, and often provided inspiration.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -95,8 +95,8 @@ density of \(\Theta \from \pi\), a sampling procedure with a consistent estimato
   \to \infty
 \end{equation}
 in some appropriate stochastic convergence (usually convergence in probability is enough).  We leave
-out the conditional dependency on \(X\) here for simplicity in notation, and since the data are
-usually fixed in inference problems.
+out the conditional dependency on \(X\) in the following for simplicity of notation, and since the
+data are usually fixed in inference problems.
 
 Examples of such methods are rejection sampling, importance sampling, and particle filters.  Many
 Monte Carlo methods are defined in a form that directly samples a sequence of individual random
@@ -126,7 +126,8 @@ resulting chain is ergodic with the target density \(\pi\) as the unique station
 i.e., for all measurable sets \(A\),
 \begin{equation}
   \label{eq:stationarity}
-  \int \pi(y) K(A \given y) \dif\mu(y) = \int_A \pi(y) \dif\mu(y),
+  \int \pi(\theta) K(A \given \theta) \dif\mu(\theta) = \int_A \pi(\theta) \dif\mu(\theta) =
+  \Prob{\Theta \in A},
 \end{equation}
 and the LLN for Markov chains holds.  (For discrete spaces, this relation is more familiarly written
 as a left eigenvalue equation on a stochastic matrix: \(\pi K = \pi\).)  The advantage of MCMC
@@ -140,9 +141,9 @@ following]{murphy2012machine} as introductions to MCMC theory and practice.
 distribution, given by a conditional density \(q\) that needs to be easy to sample from, and an
 acceptance rate \(\alpha\).  Subsequent samples are then produced by proposing values from \(q\)
 given the previous element of the chain, and incorporating them into the chain with a probability
-given through \(\alpha\) (see algorithm~\ref{alg:mh}).\todo{nicer algorithm formatting} There exist
-many MH-based schemes with different properties and requirements: from the classical random-walk
-Metropolis algorithm with Gaussian proposals, over Reversible Jump MCMC for varying dimensions
+given through \(\alpha\) (see algorithm~\ref{alg:mh}).  There exist many MH-based schemes with
+different properties and requirements: from the classical random-walk Metropolis algorithm with
+Gaussian proposals, over Reversible Jump MCMC for varying dimensions
 \parencite{green1995reversible}, to gradient-informed methods like Metropolis Adjusted Langevin and
 Hamiltonian Monte Carlo (HMC) \parencite{betancourt2018conceptual,girolami2011riemann}.
 
@@ -197,7 +198,7 @@ As an example, consider a simple Gaussian mixture model with equal weights, spec
   \begin{aligned}
     \mu_{k} &\iidfrom \Normal(m, s) \quad\text{for } 1 \le k \le K, \\
     Z_{n} &\iidfrom \distr{Categorical}(K) \quad\text{for } 1 \le n \le N, \\
-    X_{n} &\iidfrom \Normal(\mu_{Z_{n}}, \sigma) \quad\text{for } 1 \le n \le N
+    X_{n} &\iidfrom \Normal(\mu_{Z_{n}}, \sigma) \quad\text{for } 1 \le n \le N.
   \end{aligned}
 \end{equation}
 To derive the conditional distribution of \(Z_{n}\) given the remaining variables, we start by
@@ -339,7 +340,7 @@ log-probabilities.)
 S-expressions, as Church \parencite{goodman2012church}, Anglican \parencite{wood2015new}, or Venture
 \parencite{mansinghka2014venture}.  A third group is embedded into host programming languages with
 sufficient syntactic flexibility, for example Gen \parencite{cusumano-towner2020gen} and Soss
-\parencite{scherrer2019soss} in Julia (besides the already named Turing), or Pyro
+\parencite{scherrer2019soss} in Julia (besides the already named \turingjl{}), or Pyro
 \parencite{bingham2018pyro} and PyMC3 \parencite{salvatier2016probabilistic} in Python.
 
 The latter approach is advantageous when one wants to enable the use of regular, general-purpose
@@ -349,7 +350,7 @@ program than in more \enquote{mathematical} form, like as a graph or likelihood 
 probabilistic programming DSL, models will read as close to textbook model specifications as
 possible, while allowing to use the host language to:
 \begin{itemize}
-  \firmlist
+  % \firmlist
 \item define recursive relationships,
 \item write models using imperative constructs, such as loops, or mutable intermediate computations
   for efficiency,
@@ -360,9 +361,15 @@ possible, while allowing to use the host language to:
   implementations already exist, e.g. neural networks or differential equation solvers , or
 \item integrate calls to very complex external systems, e.g. simulators or renderers.
 \end{itemize}
-See \textcite{vandemeent2018introduction} for a general introduction into some common implementation
-approaches for PPLs. \Textcite{goodman2014design} gives a detailed overview of the internals of one
-specific, continuation-based implementation called WebPPL (using a Lisp-based syntax).
+Depending on the choice of features should be supported, several possibilities for the
+implementation of such a DSL exist.  All are based on some form of abstract interpretation.  A rough
+distinction can be made between \emph{compilation-based methods}, which statically translate the
+model code to a graph or density function, and \emph{evaluation-based methods}, which dynamically or
+implicitely build such a structure at runtime, by allowing an inference algorithm to interleave the
+execution.  The latter make it easier to include host-language control constructs.  See
+\textcite{vandemeent2018introduction} for a general introduction into some common implementation
+approaches for PPLs, and \textcite{goodman2014design} for a detailed overview of the internals of
+one specific, continuation-based implementation called WebPPL (using a Lisp-based syntax).
 
 \begin{lstfloat}
   \begin{lstlisting}[style=lstfloat]
@@ -410,9 +417,12 @@ function normal_mixture(x, K, m, s, σ)
     )
 end
 \end{lstlisting}
-    \caption{Macro-expanded and slightly simplified code of the model in
-    listing~\ref{lst:normal}.\label{lst:normal-expanded}}
+  \caption{Slightly simplified macro-expanded code of the model in listing~\ref{lst:normal}.  The
+    inner code is put into an \protect\jlinl{evaluator} closure, and very tilde statement is
+    replaced by a \protect\jlinl{tilde_} function, to which additional data and state information
+    are passed.\label{lst:normal-expanded}}
 \end{lstfloat}
+\setlength{\parskip}{0pt}
 
 \newthought{Models in \turingjl{}} are written in \dppljl{} syntax \parencite{tarek2020dynamicppl},
 which transforms valid Julia function definitions into a reusable representation (\jlinl{@model} is
@@ -453,7 +463,7 @@ variable names\footnote{These \jlinl{VarName} objects, constructed by the macro 
 frame containing a value for each variable at each sampling step.
 
 From the point of view of a sampling algorithm, all that it sees is a sequence of tilde statements,
-consisting of a value, a variable name, and a distribution.  Turing, crucially, does not have a
+consisting of a value, a variable name, and a distribution.  \turingjl{}, crucially, does not have a
 representation of model structure.  This is sufficient for many kinds of inference algorithms that
 it already implements~-- Metropolis-Hastings, several particle methods, HMC and NUTS, and
 within-Gibbs combinations of these~-- but does not allow more intelligent usage of the available
@@ -480,8 +490,8 @@ On top of that, the language is built on a very open compilation model.  Underly
 syntax is an abstract syntax tree (AST), that is used internally to the compiler, but also exposed
 to the programmer through macros, which allow to transform pieces of code at compile time.  These
 macros resemble proper hygienic, LISP-style code transformations, not simple text-substitutions as C
-preprocessor macros.  As an example, look at the following function that sums up the sines of a list
-of numbers:
+preprocessor macros.  As an example, look at the following function that sums up the \jlinl{sin}
+values of a list of numbers:
 \begin{lstlisting}
 function foo(x)
     y = zero(eltype(x))
